client/components/web-preview/style.scss
.web-preview {
	position: fixed;
		top: 0;
		left: 0;
		right: 0;
	margin: 0 auto;
	height: 0;
	overflow: hidden;
	z-index: z-index( 'root', '.web-preview' ); // Above TinyMCE dialogs
	opacity: 0;
	transition: 0s 0.2s height, 0.2s opacity cubic-bezier( 0.25, 0.5, 0.5, 0.9 );
}

.web-preview__backdrop {
	background: rgba( $gray, 0.9 );
	position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
	display: block;
}

.web-preview__content {
	box-shadow: 0 0 0 1px transparentize( lighten( $gray-dark, 20% ), .5 ),
		0 1px 2px lighten( $gray-dark, 30% );
	border-radius: 4px 4px 0 0;
	position: absolute;
		top: 47px;
		left: 0;
		right: 0;
		bottom: 0;
	margin: 0 auto;
	transform: scale( 0.96 );
	transition: 0.1s transform cubic-bezier( 0.25, 0.5, 0.5, 0.9 );
	background: lighten( $gray, 30% );

	.is-computer & {
		width: 100%;
	}

	.is-tablet & {
		width: 783px;
	}

	.is-phone & {
		width: 460px;
	}
}

.web-preview.is-computer .web-preview__content,
.web-preview.is-tablet .web-preview__content,
.web-preview.is-phone .web-preview__content {
	@include breakpoint( "<660px" ) {
		left: 0;
		right: 0;
		width: 100%;
	}
}

.web-preview.is-visible {
	height: 100%;
	opacity: 1;
	transition: 0s height, 0.2s opacity cubic-bezier( 0.25, 0.5, 0.5, 0.9 );

	.web-preview__content {
		transform: scale( 1 );
	}
}

.web-preview__toolbar {
	background: $white;
	border-bottom: 1px solid lighten( $gray, 20% );
	border-radius: 4px 4px 0 0;
	display: flex;
}

.web-preview.is-computer .web-preview__toolbar {
	border-radius: 0;
}

.web-preview__close,
.web-preview__external,
.web-preview__device-button {
	color: $gray;
	border-right: 1px solid lighten( $gray, 20% );
	padding: 12px 16px;

	cursor: pointer;

	&:hover {
		color: $gray-dark;
	}

	.gridicon {
		vertical-align: middle;
	}
}

.web-preview__close {
	cursor: pointer;
}

.web-preview__external {
	display: flex;
	align-items: center;
	margin-right: 8px;
}

.web-preview__device-button {
	border-right: none;
	padding-left: 8px;
	padding-right: 8px;

	&.is-active {
		color: $gray-dark;
	}

	@include breakpoint( "<660px" ) {
		display: none;
	}
}

.web-preview__toolbar-tray {
	margin-left: auto;
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-end;

	.button {
		margin: 4px;
	}
}

.web-preview__frame {
	display: block;
	width: 100%;
	height: 100%;
	opacity: 0;
	transition: opacity 0.2s ease-in-out;
	background: $gray-light;

	.is-loaded & {
		opacity: 1;
	}
}

.web-preview__placeholder {
	width: 100%;
	position: absolute;
		top: 49px;
		bottom: 0;
	overflow-y: auto;
	-webkit-overflow-scrolling: touch;
}

.web-preview .spinner {
	margin-left: -10px;
	position: absolute;
		top: 45%;
		left: 50%;
}

.web-preview__loading-message {
	color: $gray;
	font-size: 18px;
	font-weight: 300;
	text-align: center;
	display: block;
	margin: 48px 0;
}

